--- a/src/ArmaScriptProfiler/ArmaScriptProfiler.vcxproj
+++ b/src/ArmaScriptProfiler/ArmaScriptProfiler.vcxproj
@@ -26,30 +26,30 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -75,6 +75,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\Intercept\src\client\headers;$(SolutionDir)..\..\Intercept\src\client\headers\client;$(SolutionDir)..\..\Intercept\src\client\headers\shared;$(SolutionDir)..\..\Intercept\src\client\headers\client\sqf;$(SolutionDir)..\..\Intercept\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <PreprocessorDefinitions>INTERCEPT_SQF_STRTYPE_RSTRING;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -82,15 +87,27 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\Intercept\src\client\headers;$(SolutionDir)..\..\Intercept\src\client\headers\client;$(SolutionDir)..\..\Intercept\src\client\headers\shared;$(SolutionDir)..\..\Intercept\src\client\headers\client\sqf;$(SolutionDir)..\..\Intercept\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <PreprocessorDefinitions>INTERCEPT_SQF_STRTYPE_RSTRING;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\Intercept\src\client\headers;$(SolutionDir)..\..\Intercept\src\client\headers\client;$(SolutionDir)..\..\Intercept\src\client\headers\shared;$(SolutionDir)..\..\Intercept\src\client\headers\client\sqf;$(SolutionDir)..\..\Intercept\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <PreprocessorDefinitions>INTERCEPT_SQF_STRTYPE_RSTRING;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -100,10 +117,17 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\Intercept\src\client\headers;$(SolutionDir)..\..\Intercept\src\client\headers\client;$(SolutionDir)..\..\Intercept\src\client\headers\shared;$(SolutionDir)..\..\Intercept\src\client\headers\client\sqf;$(SolutionDir)..\..\Intercept\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <PreprocessorDefinitions>INTERCEPT_SQF_STRTYPE_RSTRING;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -111,6 +135,46 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="scriptProfiler.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\client.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\eventhandlers.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\pointers.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\actions.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\ai.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\camera.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\cargo.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\chat.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\common_helpers.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\config.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\core.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\ctrl.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\curator.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\debug.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\deprecated.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\eden.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\group.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\hc.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\intersects.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\inventory.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\marker.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\misc.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\multiplayer.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\position.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\rotorlib.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\sound.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\tasks.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\uncategorized.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\units.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\vehicles.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\waypoint.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\client\sqf\world.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\shared\client_types.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\shared\pool.cpp" />
+    <ClCompile Include="..\..\intercept\src\client\intercept\shared\types.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="scriptProfiler.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
